[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/theme/yrsaFont24.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/theme/greyTheme.tres" type="Theme" id=2]
[ext_resource path="res://Imports/EmptyDiamond.png" type="Texture" id=3]
[ext_resource path="res://UI/GameUI/inventoryMenu/itemSquare.gd" type="Script" id=4]

[node name="itemSquare" type="Panel"]
margin_right = 114.0
margin_bottom = 114.0
rect_min_size = Vector2( 114, 114 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slotIcon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slotLabel" type="Label" parent="."]
margin_right = 66.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = " "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slotAmount" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -29.0
margin_top = -25.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
